# proto-gear

./: .gitignore  AGENTS.md  AGENTS.md.backup  ARCHITECTURE.md  BRANCHING.md  BRANCHING.md.backup  CHANGELOG.md  CHERRY_PICK_DIAGRAM.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEAD_CODE_ANALYSIS.md  DEVELOPMENT_SUMMARY.md  INTEGRATION_NOTES.md  INTEGRATION_PLAN.md  INTEGRATION_STATUS.md  MANIFEST.in  PROJECT_STATUS.md  PROJECT_STATUS.md.backup  PROTO-023-template-auto-discovery.md  PROTO_GEAR_FINAL_ASSESSMENT.md  PROTO_GEAR_INTEGRATION_SUCCESS.md  README.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.6.2.md  REORGANIZATION_SUMMARY.md  SECURITY.md  SESSION_CLOSURE.md  SESSION_SUMMARY.md  SPRINT1_COMPLETE.md  TEMPLATES_INTEGRATION_TICKET.md  TESTING.md  TESTING_INSTRUCTIONS.md  V0.5.2-IMPLEMENTATION-GUIDE.md  VERSION_MANAGEMENT.md  WIZARD-TEMPLATE-SYNC-ISSUE.md  WORKSTREAM.md  example.config.yaml  integrate_templates.py  (+8 more)
.claude/: settings.local.json
.github/: pull_request_template.md
.github/workflows/: release.yml  tests.yml
.proto-gear/: INDEX.md
agent-framework/: README.md  setup.py
agent-framework/core/: agent_framework.py  git_workflow.py  setup_wizard.py
agent-framework/docs/: getting-started.md
agent-framework/examples/: web-app-example.yaml
agent-framework/scripts/: init-project.sh
agent-framework/tests/: test_setup_wizard.py
core/: AGENTS.template.md  BRANCHING.template.md  CONTRIBUTING.template.md  PROJECT_STATUS.template.md  SECURITY.template.md  TESTING.template.md  __init__.py  agent_framework.py  enhanced_setup_wizard.py  git_workflow.py  interactive_wizard.py  main_setup_wizard.py  multiplatform_wizard.py  proto_gear.py  setup_wizard.py  testing_workflow.py  ui_helper.py  ultimate_setup_wizard.py  version_config.py
core/proto_gear.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
core/proto_gear_pkg/: AGENTS.template.md  ARCHITECTURE.template.md  BRANCHING.template.md  CODE_OF_CONDUCT.template.md  CONTRIBUTING.template.md  PROJECT_STATUS.template.md  SECURITY.template.md  TESTING.template.md  __init__.py  agent-framework.config.yaml  agent_config.py  agent_templates.py  agent_wizard.py  capability_metadata.py  cli_commands.py  interactive_wizard.py  metadata_parser.py  proto_gear.py  status_commands.py  template_updater.py
dev/analysis/: capability-system-research-2025-11-06.md  code-analysis-report.md  refactoring-plan.md
dev/scripts/: README.md  worktree-cleanup.sh  worktree-merge.sh  worktree-setup.sh  worktree-status.sh
docs/: 100_PERCENT_COVERAGE_REPORT.md  BRANCHING_STRATEGY.md  COMPLETE_WIZARD_DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  PROTO_GEAR_LAUNCH.md  READINESS_ASSESSMENT.md  TEMPLATE_GUIDE.md  WIZARD_TEST_COMPLETE.md  getting-started.md  migration-guide.md
docs/dev/: PROTO-026-before-after.md  PROTO-026-final-summary.md  PROTO-026-phase2-summary.md  PROTO-026-review-summary.md  agent-configuration-schema.md  before-after-comparison.md  branching-strategy.md  capabilities-roadmap.md  capability-discovery-flow.md  capability-gap-analysis.md  capability-metadata-schema-v2.md  configuration.md  dogfooding-update-guide.md  (+19 more)
examples/: agent-framework.config.yaml  minimal-config.yaml
tests/: README.md  test_agent_config.py  test_agent_framework.py  test_agent_wizard.py  test_capabilities.py  test_capability_metadata.py  test_capability_security.py  test_cli_handlers.py  test_cli_integration.py  test_comprehensive_scaffolding.py  test_coverage_boost.py  test_enhanced_detection.py  test_essential_integration.py  test_git_workflow.py  test_integration_scenarios.py  test_interactive_wizard.py  test_metadata_parser.py  test_project_detection.py  test_proto_gear.py  test_proto_gear_core.py  test_rust_detection.py  test_setup_function.py  test_setup_functions.py  test_template_discovery.py  test_template_generation.py  test_template_updater.py  test_ui_helper.py  test_update_integration.py  test_version_management.py  test_wizard_custom_flow.py  test_wizard_focused.py  test_wizard_presets.py  test_wizard_types.py
(+23 files in other folders)
