[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proto-gear"
version = "0.3.0"
description = "AI Agent Framework for intelligent development workflows"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Proto Gear Team", email = "team@protogear.dev"}
]
keywords = [
    "proto-gear",
    "protogear",
    "ai-agents",
    "agent-framework",
    "development-workflow",
    "sprint-planning",
    "ticket-management",
    "git-workflow",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "questionary>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.0",
]

[project.urls]
Homepage = "https://github.com/proto-gear/proto-gear"
Documentation = "https://protogear.dev/docs"
Repository = "https://github.com/proto-gear/proto-gear"
Issues = "https://github.com/proto-gear/proto-gear/issues"
Discussions = "https://github.com/proto-gear/proto-gear/discussions"

[project.scripts]
pg = "core.proto_gear:main"
proto-gear = "core.proto_gear:main"
protogear = "core.proto_gear:main"

[tool.setuptools]
packages = ["core"]
include-package-data = true

[tool.setuptools.package-data]
core = ["*.md", "*.yaml", "*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=core --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
