[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proto-gear"
version = "0.6.4"
description = "AI Agent Framework for intelligent development workflows"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Proto Gear Team", email = "team@protogear.dev"}
]
keywords = [
    "proto-gear",
    "protogear",
    "ai-agents",
    "agent-framework",
    "development-workflow",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "questionary>=2.0",
]

[project.scripts]
pg = "proto_gear_pkg.proto_gear:main"
proto-gear = "proto_gear_pkg.proto_gear:main"
protogear = "proto_gear_pkg.proto_gear:main"

[project.urls]
Homepage = "https://github.com/proto-gear/proto-gear"
Repository = "https://github.com/proto-gear/proto-gear"
Issues = "https://github.com/proto-gear/proto-gear/issues"
